mips/mips.output
Terminals unused in grammar

   OP
   OB
   CB
   EQUAL
   LABEL


Grammar

    0 $accept: Program $end

    1 Program: Program expression
    2        | %empty

    3 expression: identifier '=' identifier '+' identifier N
    4           | identifier '=' identifier '-' identifier N
    5           | identifier '=' identifier '/' identifier N
    6           | identifier '=' identifier '*' identifier N
    7           | identifier '=' identifier '>' identifier N
    8           | identifier '=' identifier '<' identifier N
    9           | identifier '=' identifier LE identifier N
   10           | identifier '=' identifier GE identifier N
   11           | identifier '=' identifier EE identifier N
   12           | identifier '=' identifier N
   13           | STRING C
   14           | GOTO STRING N
   15           | IF STRING GOTO STRING IF FALSE GOTO STRING N
   16           | FUNC BEGIN1 STRING VALUE C
   17           | FUNC END N
   18           | CALL STRING COMMA VALUE N
   19           | STRING NAYA STRING COMMA VALUE N
   20           | RECIEVEPARAM STRING N
   21           | PARAM STRING N
   22           | RETURN STRING N
   23           | PRINT STRING N

   24 identifier: STRING
   25           | VALUE


Terminals, with rules where they appear

$end (0) 0
'*' (42) 6
'+' (43) 3
'-' (45) 4
'/' (47) 5
'<' (60) 8
'=' (61) 3 4 5 6 7 8 9 10 11 12
'>' (62) 7
error (256)
OP (258)
N (259) 3 4 5 6 7 8 9 10 11 12 14 15 17 18 19 20 21 22 23
LE (260) 9
GE (261) 10
OB (262)
CB (263)
EE (264) 11
C (265) 13 16
GOTO (266) 14 15
IF (267) 15
FALSE (268) 15
FUNC (269) 16 17
BEGIN1 (270) 16
PARAM (271) 21
RETURN (272) 22
CALL (273) 18
COMMA (274) 18 19
END (275) 17
RECIEVEPARAM (276) 20
EQUAL (277)
NAYA (278) 19
PRINT (279) 23
STRING (280) 13 14 15 16 18 19 20 21 22 23 24
LABEL (281)
VALUE (282) 16 18 19 25


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Program (36)
    on left: 1 2, on right: 0 1
expression (37)
    on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23,
    on right: 1
identifier (38)
    on left: 24 25, on right: 3 4 5 6 7 8 9 10 11 12


State 0

    0 $accept: . Program $end

    $default  reduce using rule 2 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    1 Program: Program . expression

    $end          shift, and go to state 2
    GOTO          shift, and go to state 3
    IF            shift, and go to state 4
    FUNC          shift, and go to state 5
    PARAM         shift, and go to state 6
    RETURN        shift, and go to state 7
    CALL          shift, and go to state 8
    RECIEVEPARAM  shift, and go to state 9
    PRINT         shift, and go to state 10
    STRING        shift, and go to state 11
    VALUE         shift, and go to state 12

    expression  go to state 13
    identifier  go to state 14


State 2

    0 $accept: Program $end .

    $default  accept


State 3

   14 expression: GOTO . STRING N

    STRING  shift, and go to state 15


State 4

   15 expression: IF . STRING GOTO STRING IF FALSE GOTO STRING N

    STRING  shift, and go to state 16


State 5

   16 expression: FUNC . BEGIN1 STRING VALUE C
   17           | FUNC . END N

    BEGIN1  shift, and go to state 17
    END     shift, and go to state 18


State 6

   21 expression: PARAM . STRING N

    STRING  shift, and go to state 19


State 7

   22 expression: RETURN . STRING N

    STRING  shift, and go to state 20


State 8

   18 expression: CALL . STRING COMMA VALUE N

    STRING  shift, and go to state 21


State 9

   20 expression: RECIEVEPARAM . STRING N

    STRING  shift, and go to state 22


State 10

   23 expression: PRINT . STRING N

    STRING  shift, and go to state 23


State 11

   13 expression: STRING . C
   19           | STRING . NAYA STRING COMMA VALUE N
   24 identifier: STRING .

    C     shift, and go to state 24
    NAYA  shift, and go to state 25

    $default  reduce using rule 24 (identifier)


State 12

   25 identifier: VALUE .

    $default  reduce using rule 25 (identifier)


State 13

    1 Program: Program expression .

    $default  reduce using rule 1 (Program)


State 14

    3 expression: identifier . '=' identifier '+' identifier N
    4           | identifier . '=' identifier '-' identifier N
    5           | identifier . '=' identifier '/' identifier N
    6           | identifier . '=' identifier '*' identifier N
    7           | identifier . '=' identifier '>' identifier N
    8           | identifier . '=' identifier '<' identifier N
    9           | identifier . '=' identifier LE identifier N
   10           | identifier . '=' identifier GE identifier N
   11           | identifier . '=' identifier EE identifier N
   12           | identifier . '=' identifier N

    '='  shift, and go to state 26


State 15

   14 expression: GOTO STRING . N

    N  shift, and go to state 27


State 16

   15 expression: IF STRING . GOTO STRING IF FALSE GOTO STRING N

    GOTO  shift, and go to state 28


State 17

   16 expression: FUNC BEGIN1 . STRING VALUE C

    STRING  shift, and go to state 29


State 18

   17 expression: FUNC END . N

    N  shift, and go to state 30


State 19

   21 expression: PARAM STRING . N

    N  shift, and go to state 31


State 20

   22 expression: RETURN STRING . N

    N  shift, and go to state 32


State 21

   18 expression: CALL STRING . COMMA VALUE N

    COMMA  shift, and go to state 33


State 22

   20 expression: RECIEVEPARAM STRING . N

    N  shift, and go to state 34


State 23

   23 expression: PRINT STRING . N

    N  shift, and go to state 35


State 24

   13 expression: STRING C .

    $default  reduce using rule 13 (expression)


State 25

   19 expression: STRING NAYA . STRING COMMA VALUE N

    STRING  shift, and go to state 36


State 26

    3 expression: identifier '=' . identifier '+' identifier N
    4           | identifier '=' . identifier '-' identifier N
    5           | identifier '=' . identifier '/' identifier N
    6           | identifier '=' . identifier '*' identifier N
    7           | identifier '=' . identifier '>' identifier N
    8           | identifier '=' . identifier '<' identifier N
    9           | identifier '=' . identifier LE identifier N
   10           | identifier '=' . identifier GE identifier N
   11           | identifier '=' . identifier EE identifier N
   12           | identifier '=' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 38


State 27

   14 expression: GOTO STRING N .

    $default  reduce using rule 14 (expression)


State 28

   15 expression: IF STRING GOTO . STRING IF FALSE GOTO STRING N

    STRING  shift, and go to state 39


State 29

   16 expression: FUNC BEGIN1 STRING . VALUE C

    VALUE  shift, and go to state 40


State 30

   17 expression: FUNC END N .

    $default  reduce using rule 17 (expression)


State 31

   21 expression: PARAM STRING N .

    $default  reduce using rule 21 (expression)


State 32

   22 expression: RETURN STRING N .

    $default  reduce using rule 22 (expression)


State 33

   18 expression: CALL STRING COMMA . VALUE N

    VALUE  shift, and go to state 41


State 34

   20 expression: RECIEVEPARAM STRING N .

    $default  reduce using rule 20 (expression)


State 35

   23 expression: PRINT STRING N .

    $default  reduce using rule 23 (expression)


State 36

   19 expression: STRING NAYA STRING . COMMA VALUE N

    COMMA  shift, and go to state 42


State 37

   24 identifier: STRING .

    $default  reduce using rule 24 (identifier)


State 38

    3 expression: identifier '=' identifier . '+' identifier N
    4           | identifier '=' identifier . '-' identifier N
    5           | identifier '=' identifier . '/' identifier N
    6           | identifier '=' identifier . '*' identifier N
    7           | identifier '=' identifier . '>' identifier N
    8           | identifier '=' identifier . '<' identifier N
    9           | identifier '=' identifier . LE identifier N
   10           | identifier '=' identifier . GE identifier N
   11           | identifier '=' identifier . EE identifier N
   12           | identifier '=' identifier . N

    N    shift, and go to state 43
    LE   shift, and go to state 44
    GE   shift, and go to state 45
    EE   shift, and go to state 46
    '+'  shift, and go to state 47
    '-'  shift, and go to state 48
    '/'  shift, and go to state 49
    '*'  shift, and go to state 50
    '>'  shift, and go to state 51
    '<'  shift, and go to state 52


State 39

   15 expression: IF STRING GOTO STRING . IF FALSE GOTO STRING N

    IF  shift, and go to state 53


State 40

   16 expression: FUNC BEGIN1 STRING VALUE . C

    C  shift, and go to state 54


State 41

   18 expression: CALL STRING COMMA VALUE . N

    N  shift, and go to state 55


State 42

   19 expression: STRING NAYA STRING COMMA . VALUE N

    VALUE  shift, and go to state 56


State 43

   12 expression: identifier '=' identifier N .

    $default  reduce using rule 12 (expression)


State 44

    9 expression: identifier '=' identifier LE . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 57


State 45

   10 expression: identifier '=' identifier GE . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 58


State 46

   11 expression: identifier '=' identifier EE . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 59


State 47

    3 expression: identifier '=' identifier '+' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 60


State 48

    4 expression: identifier '=' identifier '-' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 61


State 49

    5 expression: identifier '=' identifier '/' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 62


State 50

    6 expression: identifier '=' identifier '*' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 63


State 51

    7 expression: identifier '=' identifier '>' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 64


State 52

    8 expression: identifier '=' identifier '<' . identifier N

    STRING  shift, and go to state 37
    VALUE   shift, and go to state 12

    identifier  go to state 65


State 53

   15 expression: IF STRING GOTO STRING IF . FALSE GOTO STRING N

    FALSE  shift, and go to state 66


State 54

   16 expression: FUNC BEGIN1 STRING VALUE C .

    $default  reduce using rule 16 (expression)


State 55

   18 expression: CALL STRING COMMA VALUE N .

    $default  reduce using rule 18 (expression)


State 56

   19 expression: STRING NAYA STRING COMMA VALUE . N

    N  shift, and go to state 67


State 57

    9 expression: identifier '=' identifier LE identifier . N

    N  shift, and go to state 68


State 58

   10 expression: identifier '=' identifier GE identifier . N

    N  shift, and go to state 69


State 59

   11 expression: identifier '=' identifier EE identifier . N

    N  shift, and go to state 70


State 60

    3 expression: identifier '=' identifier '+' identifier . N

    N  shift, and go to state 71


State 61

    4 expression: identifier '=' identifier '-' identifier . N

    N  shift, and go to state 72


State 62

    5 expression: identifier '=' identifier '/' identifier . N

    N  shift, and go to state 73


State 63

    6 expression: identifier '=' identifier '*' identifier . N

    N  shift, and go to state 74


State 64

    7 expression: identifier '=' identifier '>' identifier . N

    N  shift, and go to state 75


State 65

    8 expression: identifier '=' identifier '<' identifier . N

    N  shift, and go to state 76


State 66

   15 expression: IF STRING GOTO STRING IF FALSE . GOTO STRING N

    GOTO  shift, and go to state 77


State 67

   19 expression: STRING NAYA STRING COMMA VALUE N .

    $default  reduce using rule 19 (expression)


State 68

    9 expression: identifier '=' identifier LE identifier N .

    $default  reduce using rule 9 (expression)


State 69

   10 expression: identifier '=' identifier GE identifier N .

    $default  reduce using rule 10 (expression)


State 70

   11 expression: identifier '=' identifier EE identifier N .

    $default  reduce using rule 11 (expression)


State 71

    3 expression: identifier '=' identifier '+' identifier N .

    $default  reduce using rule 3 (expression)


State 72

    4 expression: identifier '=' identifier '-' identifier N .

    $default  reduce using rule 4 (expression)


State 73

    5 expression: identifier '=' identifier '/' identifier N .

    $default  reduce using rule 5 (expression)


State 74

    6 expression: identifier '=' identifier '*' identifier N .

    $default  reduce using rule 6 (expression)


State 75

    7 expression: identifier '=' identifier '>' identifier N .

    $default  reduce using rule 7 (expression)


State 76

    8 expression: identifier '=' identifier '<' identifier N .

    $default  reduce using rule 8 (expression)


State 77

   15 expression: IF STRING GOTO STRING IF FALSE GOTO . STRING N

    STRING  shift, and go to state 78


State 78

   15 expression: IF STRING GOTO STRING IF FALSE GOTO STRING . N

    N  shift, and go to state 79


State 79

   15 expression: IF STRING GOTO STRING IF FALSE GOTO STRING N .

    $default  reduce using rule 15 (expression)
